# optimization-buck-passing

./: .gitignore  README.md  compose.yml  job.sh  main.py  pyproject.toml  worker.py
barrel/: __init__.py  slurm.py
barrel/core/: __init__.py  mock_submitter.py  openbox.py  remote_advisor_dbg.py  simple_policy.py  slurm_submitter.py
services/: django.sh  entrypoint.sh  open-box.Dockerfile  orchestrator.Dockerfile  slurm.Dockerfile  slurm.conf
src/: example.py  job.sh  main.py  worker.py
