[project]
name = "barrel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openbox>=0.8.4",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", 
    "S101", 
    "D105",
    "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "TD003",
    "TD002",
    "FIX002",
    "S311"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.basedpyright]
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
