[project]
name = "barrel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openbox>=0.8.4",
    "requests>=2.32.5",
    "buckpass",
]

[tool.uv.sources]
buckpass = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101", # Use of `assert` detected
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "ERA001", # Found commented-out code
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.basedpyright]
reportMissingTypeStubs = false
